2018-04-25  Zalan Bujtas  <zalan@apple.com>

        [LFC] Implement Layout::Container functions.
        https://bugs.webkit.org/show_bug.cgi?id=184988

        Reviewed by Antti Koivisto.

        * layout/layouttree/LayoutContainer.cpp:
        (WebCore::Layout::Container::Container):
        (WebCore::Layout::Container::firstInFlowChild const):
        (WebCore::Layout::Container::firstInFlowOrFloatingChild const):
        (WebCore::Layout::Container::lastInFlowChild const):
        (WebCore::Layout::Container::lastInFlowOrFloatingChild const):
        (WebCore::Layout::Container::setFirstChild):
        (WebCore::Layout::Container::setLastChild):
        (WebCore::Layout::Container::setOutOfFlowDescendants):
        * layout/layouttree/LayoutContainer.h:
        (WebCore::Layout::Container::firstChild const):
        (WebCore::Layout::Container::lastChild const):
        (WebCore::Layout::Container::hasChild const):
        (WebCore::Layout::Container::hasInFlowChild const):
        (WebCore::Layout::Container::hasInFlowOrFloatingChild const):
        (WebCore::Layout::Container::outOfFlowDescendants):

2018-04-25  Brent Fulgham  <bfulgham@apple.com>

        Don't Block First Party Cookies on Redirects
        https://bugs.webkit.org/show_bug.cgi?id=184948
        <rdar://problem/39534099>

        Reviewed by Youenn Fablet.

        The Navigation scheduler looses the 'requester' value when performing a ScheduledRedirect.

        Test: http/tests/resourceLoadStatistics/do-not-block-top-level-navigation-redirect.html

        * loader/NavigationScheduler.cpp:

2018-04-25  Youenn Fablet  <youenn@apple.com>

        CachedRawResource is not handling incremental data computation correctly
        https://bugs.webkit.org/show_bug.cgi?id=184936

        Reviewed by Chris Dumez.

        Covered by updated test.

        The previous logic was handling the case of only one additional segment being added to the SharedBuffer.