@@ -1,5 +1,16 @@
 2018-04-25  Zalan Bujtas  <zalan@apple.com>
 
+        [LFC] Implement Layout::BlockContainer functions.
+        https://bugs.webkit.org/show_bug.cgi?id=184994
+
+        Reviewed by Antti Koivisto.
+
+        * layout/layouttree/LayoutBlockContainer.cpp:
+        (WebCore::Layout::BlockContainer::BlockContainer):
+        (WebCore::Layout::BlockContainer::establishesInlineFormattingContext const):
+
+2018-04-25  Zalan Bujtas  <zalan@apple.com>
+
         [LFC] Implement Layout::Container functions.
         https://bugs.webkit.org/show_bug.cgi?id=184988
 
